--- a/css/style.css
+++ b/css/style.css
@@ -886,7 +886,7 @@ right: -15px;
 }
 .subscribe form i{
     position: absolute;
-    top: -50%;
+    top: 50%;
     transform: translateY(-50%);
     left: 25px;
 }
@@ -909,4 +909,55 @@ right: -15px;
 }
 .subscribe form ::placeholder{
     color: white;
+}
+.subscribe form input[type="email"]:focus,
+.subscribe form input[type="submit"]:focus{
+outline: none;
+}
+.subscribe p{
+    line-height: 2;
+    margin-left: 50px;
+}
+@media (max-width:991px){
+    .subscribe p{
+        margin: 30px 0 0;
+    }
+}
+/* contact */
+.contact{
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
+.contact .content{
+    display: flex;
+    justify-content: space-between;
+}
+.contact .content form{
+    flex-basis: 70%;
+}
+.contact .content form .main-input{ 
+    padding: 20px;
+    display: block;
+    border: 1px solid #ccc;
+    margin-bottom: 30px;
+    width: 100%;
+}
+.contact .content form .main-input:focus{
+    outline:none;
+} 
+.contact .content form textarea.main-input{ 
+height: 200px;
+}
+.contact .content form input[type="submit"]{
+    background-color: var(--main-color);
+    color: white;
+    display: flex;
+    border: none;
+    cursor: pointer;
+    padding: 20px;
+    margin-left: auto;
+    text-transform: uppercase;
+}
+.contact .content .info{
+    
 }
